--- a/jira/tasks/install_jira.yml
+++ b/jira/tasks/install_jira.yml
@@ -11,28 +11,32 @@
   user: name={{ jira_user }} shell=/bin/bash group={{ jira_user_group }} uid={{ jira_user_uid }} home={{ jira_user_home_dir }}
 
 - name: Download the Source
-  get_url: url={{ jira_download_link }}-{{ jira_version }}.tar.gz sha256sum={{ jira_version_file_sha256sum }} dest={{ jira_user_home_dir }}/atlassian-jira-{{ jira_version }}.tar.gz
+  get_url: url={{ jira_download_link }}-{{ jira_version }}.tar.gz sha256sum={{ jira_version_file_sha256sum }} dest={{ jira_user_home_dir }}/atlassian-jira-{{ jira_version }}.tar.gz 
 
 - stat: path={{ jira_user_home_dir }}/atlassian-jira-{{ jira_version }}-standalone
   register: st
 
-- name: Extrat the sources
+- name: Extract the sources
   unarchive: src={{ jira_user_home_dir }}/atlassian-jira-{{ jira_version }}.tar.gz dest={{ jira_user_home_dir }} copy=no
   when: not st.stat.exists
 
 - name: Make the directory easier to reach
-  file: src={{ jira_user_home_dir }}/atlassian-jira-{{ jira_version }}-standalone dest={{ jira_user_home_dir }}/jira owner={{ jira_user }} group={{ jira_user_group }} state=link
+  file: src={{ jira_user_home_dir }}/atlassian-jira-{{ jira_version }}-standalone dest={{ jira_user_home_dir }}/current owner={{ jira_user }} group={{ jira_user_group }} state=link
 
 - name: Create jira-home dir
   file: path={{ jira_home }} state=directory owner={{ jira_user }} group={{ jira_user_group }} 
 
 - name: Set the home dir inside the configs
-  template: src=jira-application.properties.j2 dest={{ jira_user_home_dir }}/jira/atlassian-jira/WEB-INF/classes/jira-application.properties owner={{ jira_user }} group={{ jira_user_group }} mode=0644
+  template: src=jira-application.properties.j2 dest={{ jira_user_home_dir }}/current/atlassian-jira/WEB-INF/classes/jira-application.properties owner={{ jira_user }} group={{ jira_user_group }} mode=0644
 
 - name: Copy the service script
   template: src=jira.service.j2 dest=/usr/lib/systemd/system/jira.service
   when: ansible_os_family == "RedHat" and ansible_lsb.major_release|int == 7
 
 - name: Copy the init.d script
-  template: src=jira.js dest=/etc/init.d/jira
-  when: ansible_os_family == "RedHat" and ansible_lsb.major_release|int == 6
+  template: src=jira.j2 dest=/etc/init.d/jira mode=0755
+  when: ansible_os_family == "RedHat" and ansible_lsb.major_release|int == 6 or ansible_os_family == "Debian"
+
+- name: Update the services on the OS
+  command: update-rc.d jira defaults 
+  when: ansible_os_family == "Debian"
