--- a/jira/tasks/install_jira.yml
+++ b/jira/tasks/install_jira.yml
@@ -1,9 +1,5 @@
 ---
 
-# Start installing and configuring jira
-#- name: Directory needed before creating JIRA stuff
-#  file: path=/str state=directory mode=0755
-
 - name: Jira groups
   group: name={{ jira_user_group }} gid={{ jira_user_group_gid }}
 
@@ -37,6 +33,36 @@
   template: src=jira.j2 dest=/etc/init.d/jira mode=0755
   when: ansible_os_family == "RedHat" and ansible_lsb.major_release|int == 6 or ansible_os_family == "Debian"
 
+- name: Download the Java MySQL driver
+  get_url: url=http://dev.mysql.com/get/Downloads/Connector-J/mysql-connector-java-5.1.34.tar.gz dest={{ jira_user_home_dir }}/mysql-connector.tar.gz
+
+- stat: path={{ jira_user_home_dir }}/current/lib/mysql-connector-java-5.1.34-bin.jar
+  register: connector
+
+- name: Extract the Java MySQL driver
+  unarchive: src={{ jira_user_home_dir }}/mysql-connector.tar.gz dest={{ jira_user_home_dir }} copy=no
+  when: not connector.stat.exists
+
+- name: Copy the Java MySQL connector into JIRA
+  command: cp {{ jira_user_home_dir }}/mysql-connector-java-5.1.34/mysql-connector-java-5.1.34-bin.jar {{ jira_user_home_dir }}/current/lib/mysql-connector-java-5.1.34-bin.jar 
+  when: not connector.stat.exists
+
+- name: Change ownership of the JIRA directory
+  file: path={{ jira_user_home_dir }}/current/ recurse=yes state=directory group={{ jira_user_group }} owner={{ jira_user }}
+
 - name: Update the services on the OS
   command: update-rc.d jira defaults 
   when: ansible_os_family == "Debian"
+
+- name: Setup MySQL root user
+  mysql_user: name=root password={{ mysql_root_password }}
+
+- name: copy .my.cnf file with root password credentials
+  template: src=.my.cnf.j2 dest=~/.my.cnf mode=0600
+
+- name: Setup the JIRA database
+  mysql_db: name={{ mysql_jira_db }} state=present collation=utf8_bin encoding=utf8
+
+- name: Setup JIRA User in MySQL
+  mysql_user: name={{ mysql_jira_user }} password={{mysql_jira_password }} priv={{ mysql_jira_db }}.*:SELECT,INSERT,UPDATE,DELETE,CREATE,DROP,ALTER,INDEX
+
